--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-        
+
     <nav class="navbar">
         <div class="navbar-container container">
             <input type="checkbox" name="" id="">
@@ -35,33 +35,58 @@
     </nav>
     <div class="info">
 
-       <div class="logo2">
-        <img src="logo2.png" alt="">
-       </div>
+        <div class="logo2">
+            <img src="logo2.png" alt="">
+        </div>
 
-       <!-- <div class="name">Sanam Photos</div> -->
+        <!-- <div class="name">Sanam Photos</div> -->
 
-       <div class="socials">
+        <div class="socials">
             <a href=" "><img src="instagram.png" alt=""></a>
             <a href=" "><img src="twitter.png" alt=""></a>
             <a href=" "><img src="facebook.png" alt=""></a>
-       </div>
+        </div>
 
     </div>
 
-
-    <div class="grid-container">
-        <div class="grid-item">1</div>
-        <div class="grid-item">2</div>
-        <div class="grid-item">3</div>
-        <div class="grid-item">4</div>
-        <div class="grid-item">5</div>
-        <!-- <div class="grid-item">1</div>
-        <div class="grid-item">2</div>
-        <div class="grid-item">3</div>
-        <div class="grid-item">4</div>
-        <div class="grid-item">5</div> -->
+    <!-- <h1>Simple and Responsive CSS Image Grid</h1> -->
+    <h3>And here I'm serving you some of my work ✌😏</h3>
+    <div class="myGallery">
+        <img src="beer foam.jpg" />
+        <img src="orange.jpg" />
+        <img src="product yello.jpg" />
+        <img src="beer grass.jpg" />
+        <img src="green.jpg" />
+        <img src="" />
+        <img src="" />
+        <img src="" />
+        <img src="" />
+        <img src="" />
+        <div class="item">
+            <img src="https://picsum.photos/190/190?11" />
+            <span class="caption">This is an image caption for image 11</span>
+        </div>
+        <div class="item">
+            <img src="https://picsum.photos/190/190?12" />
+            <span class="caption">This is an image caption for image 12</span>
+        </div>
+        <div class="item">
+            <img src="https://picsum.photos/190/190?13" />
+            <span class="caption">This is an image caption for image 13</span>
+        </div>
+        <div class="item">
+            <img src="https://picsum.photos/190/190?14" />
+            <span class="caption">This is an image caption for image 14</span>
+        </div>
+        <div class="item">
+            <img src="https://picsum.photos/190/190?15" />
+            <span class="caption">This is an image caption for image 15</span>
+        </div>
     </div>
+    <!-- <p><em><small>If you need something fancier, just check out <a href="https://gridzy.gallery/"
+                    target="_blank">Gridzy.Gallery</a></small></em></p> -->
+
 
 </body>
+
 </html>
