improvements and added pics

--- a/index.html
+++ b/index.html
@@ -50,42 +50,60 @@
     </div>
 
     <!-- <h1>Simple and Responsive CSS Image Grid</h1> -->
-    <h3>And here I'm serving you some of my work ✌😏</h3>
-    <div class="myGallery">
-        <img src="beer foam.jpg" />
-        <img src="orange.jpg" />
-        <img src="product yello.jpg" />
-        <img src="beer grass.jpg" />
-        <img src="green.jpg" />
-        <img src="" />
-        <img src="" />
-        <img src="" />
-        <img src="" />
-        <img src="" />
-        <div class="item">
-            <img src="https://picsum.photos/190/190?11" />
-            <span class="caption">This is an image caption for image 11</span>
+    <div class="txt">
+        <h2>And here I'm serving you some of my work ✌😏</h2>
+    </div>
+    <div class="grid-container">
+        <div class="column">
+            <img
+                src="beer foam.jpg">
+
+            <img
+                src="green.jpg">
+
+            <img
+                src="product yello.jpg">
         </div>
-        <div class="item">
-            <img src="https://picsum.photos/190/190?12" />
-            <span class="caption">This is an image caption for image 12</span>
+
+        <div class="column">
+            <img
+                src= "beer grass.jpg">
+
+            <img
+                src="orange.jpg">
+
+            <img
+                src="momos.jpg">
+
+            <img
+                src="Anon.jpg">
         </div>
-        <div class="item">
-            <img src="https://picsum.photos/190/190?13" />
-            <span class="caption">This is an image caption for image 13</span>
+
+        <div class="column">
+            <img
+                src="momos.jpg">
+
+            <img
+                src="product yello.jpg">
+
+            <img
+                src="https://images.pexels.com/photos/4197439/pexels-photo-4197439.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500">
         </div>
-        <div class="item">
-            <img src="https://picsum.photos/190/190?14" />
-            <span class="caption">This is an image caption for image 14</span>
-        </div>
-        <div class="item">
-            <img src="https://picsum.photos/190/190?15" />
-            <span class="caption">This is an image caption for image 15</span>
+
+        <div class="column">
+            <img
+                src="Anon.jpg">
+
+            <img
+                src="https://images.pexels.com/photos/4555468/pexels-photo-4555468.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500">
+
+            <img
+                src="https://images.pexels.com/photos/2899100/pexels-photo-2899100.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500">
+
+            <img
+                src="https://images.pexels.com/photos/3726314/pexels-photo-3726314.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500">
         </div>
     </div>
-    <!-- <p><em><small>If you need something fancier, just check out <a href="https://gridzy.gallery/"
-                    target="_blank">Gridzy.Gallery</a></small></em></p> -->
-
 
 </body>
 
