improved info section

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <!-- <h1>Simple and Responsive CSS Image Grid</h1> -->
     <div class="txt">
-        <h2>And here I'm serving you some of my work ✌😏</h2>
+        <h3>My work ✌😏</h3>
     </div>
     <div class="grid-container">
         <div class="column">
