improvement and added footer

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 
     </div>
 
-    <!-- <h1>Simple and Responsive CSS Image Grid</h1> -->
+    <!-- <h1>Simple and Resposive CSS Image Grid</h1> -->
     <div class="txt">
-        <h3>My work ✌😏</h3>
+        <h1>My work ✌😏</h1>
     </div>
     <div class="grid-container">
         <div class="column">
@@ -104,6 +104,21 @@
                 src="https://images.pexels.com/photos/3726314/pexels-photo-3726314.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500">
         </div>
     </div>
+
+
+    <footer>
+        <div class="footer_container">
+          <div class="logo3"> <p>SANAM PHOTOSs </p></div>
+            <div class="social_media">
+              <a href="#"><i class="fab fa-facebook-f"></i></a>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="#"><i class="fab fa-youtube"></i></a>
+              <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            </div>
+            <p>Dragon Network © 2020 All Rights Reserved.</p>
+          </div>
+      </footer>
 
 </body>
 
