--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
     <footer>
         <div class="footer_container">
-          <div class="logo3"> <p>SANAM PHOTOSs </p></div>
+          <div class="logo3"> <p>SANAM PHOTOS </p></div>
             <div class="social_media">
               <a href="#"><i class="fab fa-facebook-f"></i></a>
               <a href="#"><i class="fab fa-twitter"></i></a>
@@ -116,7 +116,7 @@
               <a href="#"><i class="fab fa-youtube"></i></a>
               <a href="#"><i class="fab fa-linkedin-in"></i></a>
             </div>
-            <p>Dragon Network © 2020 All Rights Reserved.</p>
+            <p>Sanam Photos © 2020 All Rights Reserved.</p>
           </div>
       </footer>
 
