--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sanam</title>
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="style.css">
@@ -23,8 +23,8 @@
                 <span class="line line3"></span>
             </div>
             <ul class="menu-items">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="#HOME">Home</a></li>
+                <li><a href="#ABOUT">About</a></li>
                 <li><a href="#">Category</a></li>
                 <li><a href="#">Menu</a></li>
                 <li><a href="#">Testimonial</a></li>
@@ -33,7 +33,7 @@
             <h1 class="logo">Sanam Photos</h1>
         </div>
     </nav>
-    <div class="info">
+    <div class="info" id="#HOME" > 
 
         <div class="logo2">
             <img src="logo2.png" alt="">
@@ -42,7 +42,7 @@
         <!-- <div class="name">Sanam Photos</div> -->
 
         <div class="socials">
-            <a href=" "><img src="instagram.png" alt=""></a>
+            <a href="https://www.instagram.com/sanam_photoz/"><img src="instagram.png" alt=""></a>
             <a href=" "><img src="twitter.png" alt=""></a>
             <a href=" "><img src="facebook.png" alt=""></a>
         </div>
@@ -55,44 +55,34 @@
     </div>
     <div class="grid-container">
         <div class="column">
-            <img
-                src="beer foam.jpg">
+            <img src="beer foam.jpg">
 
-            <img
-                src="green.jpg">
+            <img src="green.jpg">
 
-            <img
-                src="product yello.jpg">
+            <img src="product yello.jpg">
         </div>
 
         <div class="column">
-            <img
-                src= "beer grass.jpg">
+            <img src="beer grass.jpg">
 
-            <img
-                src="orange.jpg">
+            <img src="orange.jpg">
 
-            <img
-                src="momos.jpg">
+            <img src="momos.jpg">
 
-            <img
-                src="Anon.jpg">
+            <img src="Anon.jpg">
         </div>
 
         <div class="column">
-            <img
-                src="momos.jpg">
+            <img src="momos.jpg">
 
-            <img
-                src="product yello.jpg">
+            <img src="product yello.jpg">
 
             <img
                 src="https://images.pexels.com/photos/4197439/pexels-photo-4197439.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500">
         </div>
 
         <div class="column">
-            <img
-                src="Anon.jpg">
+            <img src="Anon.jpg">
 
             <img
                 src="https://images.pexels.com/photos/4555468/pexels-photo-4555468.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500">
@@ -108,17 +98,19 @@
 
     <footer>
         <div class="footer_container">
-          <div class="logo3"> <p>SANAM PHOTOS </p></div>
+            <div class="logo3" id="#ABOUT" >
+                <p>SANAM PHOTOS </p>
+            </div>
             <div class="social_media">
-              <a href="#"><i class="fab fa-facebook-f"></i></a>
-              <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fab fa-instagram"></i></a>
-              <a href="#"><i class="fab fa-youtube"></i></a>
-              <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-youtube"></i></a>
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>
             </div>
             <p>Sanam Photos © 2020 All Rights Reserved.</p>
-          </div>
-      </footer>
+        </div>
+    </footer>
 
 </body>
 
