--- a/index.html
+++ b/index.html
@@ -55,11 +55,12 @@
     </div>
     <div class="grid-container">
         <div class="column">
-            <img src="beer foam.jpg">
-
-            <img src="green.jpg">
-
-            <img src="product yello.jpg">
+            <!-- <img src="beer foam.jpg"> -->
+            <a href="beer foam.jpg"><img src="beer foam.jpg"></a>
+            
+            <a href="green.jpg"><img src="green.jpg"></a>
+            <a href="product yello.jpg"><img src="product yello.jpg"></a>
+            
         </div>
 
         <div class="column">
