added pics  opener

--- a/index.html
+++ b/index.html
@@ -51,39 +51,39 @@
 
     <!-- <h1>Simple and Resposive CSS Image Grid</h1> -->
     <div class="txt">
-        <h1>My work ✌😏</h1>
+        <!-- <h1>My work ✌😏</h1> -->
     </div>
     <div class="grid-container">
         <div class="column">
             <!-- <img src="beer foam.jpg"> -->
-            <a href="beer foam.jpg"><img src="beer foam.jpg"></a>
+            <a href="beer foam.jpg"><img src="images2/beer foam.jpeg"></a>
             
-            <a href="green.jpg"><img src="green.jpg"></a>
-            <a href="product yello.jpg"><img src="product yello.jpg"></a>
+            <a href="green.jpg"><img src="images2/green.jpeg"></a>
+            <a href="product yello.jpg"><img src="images2/product.jpeg"></a>
             
         </div>
 
         <div class="column">
-            <img src="beer grass.jpg">
+            <img src="images2/beer grass.jpeg">
 
-            <img src="orange.jpg">
+            <img src="images2/orange.jpeg">
 
-            <img src="momos.jpg">
+            <img src="images2/momos.jpeg">
 
-            <img src="Anon.jpg">
+            <img src="images2/anon.jpeg">
         </div>
 
         <div class="column">
-            <img src="momos.jpg">
+            <img src="images2/momos.jpeg">
 
-            <img src="product yello.jpg">
+            <img src="images2/product.jpeg">
 
             <img
                 src="https://images.pexels.com/photos/4197439/pexels-photo-4197439.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500">
         </div>
 
         <div class="column">
-            <img src="Anon.jpg">
+            <img src="images2/anon.jpeg">
 
             <img
                 src="https://images.pexels.com/photos/4555468/pexels-photo-4555468.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500">
